ACS-6188 Remove usage of deprecated constructors (#2295)
* Apply org.openrewrite.staticanalysis.PrimitiveWrapperClassConstructorToValueOf recipe

* ACS-6188 Update copyright headers

* ACS-6188 Update copyright header

* ACS-6188 Clean-up

---------

Co-authored-by: dsibilio <24280982+dsibilio@users.noreply.github.com>
Co-authored-by: Domenico Sibilio <domenicosibilio@gmail.com>