@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Data model classes
  * %%
- * Copyright (C) 2005 - 2016 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -190,7 +190,7 @@ public class Duration implements Comparable, Serializable
             {
                if (token == StreamTokenizer.TT_NUMBER)
                {
-                  nval = new Double(tok.nval);
+                  nval = Double.valueOf(tok.nval);
                }
                else if (token == StreamTokenizer.TT_EOF)
                {
