@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Remote API
  * %%
- * Copyright (C) 2005 - 2022 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -146,7 +146,7 @@ public class AdminWebScriptTest extends BaseWebScriptTest
         RepoUsage usage = usageStatus.getUsage();
         LicenseDescriptor licenseDescriptor = descriptorService.getLicenseDescriptor();
         Date validUntil = (licenseDescriptor == null) ? null : licenseDescriptor.getValidUntil(); // might be null
-        Integer checkLevel = new Integer(usageStatus.getLevel().ordinal());
+        Integer checkLevel = Integer.valueOf(usageStatus.getLevel().ordinal());
         
         String url = "/api/admin/usage";
         TestWebScriptServer.GetRequest req = new TestWebScriptServer.GetRequest(url);
