@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Repository
  * %%
- * Copyright (C) 2005 - 2016 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -232,7 +232,7 @@ public class CMISNodeInfoImpl implements CMISNodeInfo
         		Long assocId = null;
         		try
         		{
-        			assocId = new Long(objectId.substring(CMISConnector.ASSOC_ID_PREFIX.length()));
+        			assocId = Long.valueOf(objectId.substring(CMISConnector.ASSOC_ID_PREFIX.length()));
         		} catch (NumberFormatException nfe)
         		{
         			objecVariant = CMISObjectVariant.INVALID_ID;
