@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Repository
  * %%
- * Copyright (C) 2005 - 2016 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -242,8 +242,8 @@ public class DownloadStorage
         validateNode(nodeRef);
         
         nodeService.setProperty(nodeRef, DownloadModel.PROP_STATUS, status.getStatus().toString());
-        nodeService.setProperty(nodeRef, DownloadModel.PROP_DONE, new Long(status.getDone()));
-        nodeService.setProperty(nodeRef, DownloadModel.PROP_TOTAL, new Long(status.getTotal()));
+        nodeService.setProperty(nodeRef, DownloadModel.PROP_DONE, Long.valueOf(status.getDone()));
+        nodeService.setProperty(nodeRef, DownloadModel.PROP_TOTAL, Long.valueOf(status.getTotal()));
         nodeService.setProperty(nodeRef, DownloadModel.PROP_FILES_ADDED, status.getFilesAdded());
         nodeService.setProperty(nodeRef, DownloadModel.PROP_TOTAL_FILES, status.getTotalFiles());
     }
