@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Repository
  * %%
- * Copyright (C) 2005 - 2016 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -135,7 +135,7 @@ public class ReplicationDefinitionImpl extends ActionImpl implements Replication
      */
     public void setEnabled(boolean enabled)
     {
-       setParameterValue(REPLICATION_DEFINITION_ENABLED, new Boolean(enabled));
+       setParameterValue(REPLICATION_DEFINITION_ENABLED, Boolean.valueOf(enabled));
     }
 
     /*
